# pele

./: .coveragerc  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  README.rst  codecov.yml  compile_commands.json  cythonize.py  install_sundials.sh  pyproject.toml  requirements.txt  setup.py  setup_pele_environment.sh  setup_with_cmake.py  time_cvode.txt  trajectory.txt  trajectory_cvode.txt  trajectory_lbfgs.txt  trajectory_modified_fire.txt
.github/workflows/: test-pip-install.yml  test.yml
CMake/Modules/: FINDGMP.cmake  FINDMPFR.cmake
cmake/Modules/: FindSundial.cmake
cpp_tests/: README
cpp_tests/source/: CMakeLists.txt  box_length.txt  box_length_n.txt  cmake_install.cmake  grad_cvode.txt  hessian_eigvals_cvode.txt  lbfgs_m_1_step_cvode.txt  newton_step_cvode.txt  radii.txt  radii_n.txt  step_cvode.txt  test_aatopology.cpp  test_array.cpp  test_base_potential.cpp  test_blj.cpp  test_cell_list_minimize.cpp  test_cell_lists.cpp  test_cell_lists_hs_wca.cpp  test_check_copy_assignment_cvode.cpp  test_combinations.cpp  test_combined_potential.cpp  test_cv_petsc.cpp  test_cvode.cpp  test_distance.cpp  test_eigenvalues.cpp  test_energy_change.cpp  test_fire.cpp  test_frozen.cpp  test_gaussianpot.cpp  test_generic_mixed_descent.cpp  test_gradient_descent.cpp  test_harmonic.cpp  test_hoomd.cpp  test_inversepower.cpp  test_inversepower_hs.cpp  test_inversepower_stillinger.cpp  test_inversepower_stillinger_cut.cpp  test_inversepower_stillinger_cut_quad.cpp  test_inversepower_stillinger_cut_quad.hpp  test_lbfgs.cpp  (+25 more)
cpp_tests/source/CMakeModules/: CodeCoverage.cmake
cpp_tests/source/benchmarks/: CMakeLists.txt  bench_cell_lists.cpp  bench_cell_lists.py  bench_cell_lists2.cpp  bench_cell_lists_alt.cpp  bench_inversepower.cpp  bench_lib.cpp  bench_lj.cpp  bench_minimization.cpp  bench_minimization.py  bench_utils.hpp
doc/: conf.py
doc/sphinxext/: viewcode-new.py
examples/basinhopping/: 1_basic.py  2_readinitial.py  3_savelowest.py  4_adaptivestep.py  5_custom_takestep.py  6_reseeding.py
examples/basinhopping_no_system_class/: 1_basic.py  2_readinitial.py  3_savelowest.py  4_adaptivestep.py  5_custom_takestep.py  6_reseeding.py
examples/connecting_minima/: connect.py  connect_from_database.py  connect_no_system_class.py  modifying_parameters.py
examples/disconnectivity_graph/: make_disconnectivity_graph.py
examples/frozen_degrees_of_freedom/: frozen_lj.py
examples/getting_started/: example1_minimization.py  example2_global_optimization.py
examples/gui/: _blj_dialog.py  bljsystem.py  ljsystem.py
examples/heisenberg_model/: 2dRAHM.py
examples/mindist/: ljmindist.py
examples/new_potential/: compiled_potentials.py  my1dpotential.py  mypotential.py
examples/parallel_pele/: start_basinhopping_worker.py  start_connect_worker.py  start_server.py
examples/pspinspherical/: start_serial.py
examples/using_the_system_class/: using_the_system_class.py
examples/xymodel/: runxymodel.py
packings/: packing0.xyzd  packing1.xyzd  packing2.xyzd  packing3.config  packing3.xyzd  packing4.xyzd  packing5.xyzd  packing6.xyzd  packing7.xyzd  packing8.xyzd  packing9.xyzd
pele/: __init__.py  basinhopping.py  config.py  exceptions.py  mc.py  test_basinhopping.py
pele/accept_tests/: .#spherical_container.py  __init__.py  dont_leave_basin.py  metropolis.py  spherical_container.py
pele/amber/: __init__.py  amberSystem.py  coords2pdb.py  gmin_potential.py  internal_coords.py  measure.py  openmm_potential.py  read_amber.py  sanity_checks.py
pele/angleaxis/: __init__.py  _aa_utils.py  _cpp_aa.pyx  _otp_bulk.py  _otp_cluster.py  aamindist.py  aaperiodicttransforms.py  aasystem.py  aatopology.py  bulk_rigid_mindist.py  molecules.py  rigidbody.py
pele/concurrent/: __init__.py  _connect_server.py
pele/distance/: __init__.py  _get_distance_cpp.pyx  _put_in_box_cpp.pyx
pele/gui/: MainWindow.py  __init__.py  _cv_viewer.py  _list_views.py  _rate_gui.py  bhrunner.py  connect_all.py  connect_explorer_dlg.py  connect_explorer_ui.py  connect_run_dlg.py  dlg_params.py  double_ended_connect_runner.py  graph_viewer.py  neb_explorer.py  nebdlg.py  normalmode_browser.py  pymol_viewer.py  run.py  show3d.py  show3d_with_slider.py  takestep_explorer.py  ui_params.py
pele/landscape/: __init__.py  _distance_graph.py  _graph.py  _smooth_path.py  connect_manager.py  connect_min.py  local_connect.py  path.out  singleended.py
pele/mindist/: __init__.py  _minpermdist_policies.py  _pointgrouporder.py  _wrapper_atomiccluster.py  backward_compatibility.py  exact_match.py  minpermdist_stochastic.py  periodic_exact_match.py  periodic_mindist.py  permutational_alignment.py  rmsfit.py
pele/optimize/: __init__.py  __init__.py.bak  _cosine_gradient_descent_cpp.pyx  _cython_lbfgs.pyx  _fire.py  _gradient_descent_cpp.pyx  _lbfgs_cpp.pyx  _lbfgs_py.py  _lbfgs_py_3.py.bak  _lbfgsmpfr_cpp.pyx  _modified_fire_cpp.pxd  _modified_fire_cpp.pyx  _mxd_end_only.pyx  _mxopt.pyx  _mylbfgs.py  _pele_opt.pxd  _pele_opt.pyx  _pele_opt_mpfr.pxd  _quench.py  _quench_jl.py  combine_potentials.pyx  cvode_opt.pyx  extended_mixed_descent.pyx  generic_mixed_descent.pyx  ode_linesearch.py  optimization_exceptions.py  pele_opt_mpfr.pxd  pele_opt_mpfr.pyx  result.py  rk.py  rk45.py
pele/potentials/: ATLJ.py  _HPModel.pyx  __init__.py  _cython_tools.pyx  _fin_sin.py  atlj.pyx  (+35 more)
scripts/: compute_cv.py  dump_database.py  make_disconnectivity_graph.py  migrate_db.py  optim_database_converter.py  optim_database_gui.py  parallel_pele.py
source/: ExactSum.cpp  Field.cpp  Globals.cpp  HPModel.cpp  Histogram.cpp  Vector.cpp  aatopology.cpp  atlj.cpp  backtracking.cpp  bracketing.cpp  cvode.cpp  cvode_modified_newton.c  extended_mixed_descent.cpp  generic_mixed_descent.cpp  lbfgs.cpp  lbfgsmpfr.cpp  linesearch.cpp  mixed_descent_with_fire.cpp  modified_fire.cpp  more_thuente.cpp  mxd_end_only.cpp  mxopt.cpp  newton.cpp  newton_trust.cpp  newton_with_extension.cpp  nwpele.cpp  pbinary.c  petsc_ts.cpp  pressure_tensor.cpp  rotations.cpp  sunmatrix_petsc.c  sunnonlinsol_petscsnes.c  translation_symmetry_matrices.hpp  xsum.c
(+447 files in other folders)
