[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pele"
version = "0.1"
description = "Python Energy Landscape Explorer"
readme = "README.rst"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["energy landscape", "global optimization", "pele", "scientific computing", "chemistry", "physics"]
authors = [
  { name = "The pele developers" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "cython>=3.0.0",
    "pyyaml",
    "future",
    "omp-thread-count",
    "matplotlib",
    "SQLAlchemy==1.4.51",
    "munkres",
    "pyro4",
]

[project.urls]
"Homepage" = "https://github.com/martiniani-lab/pele/"